--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ExamenConsolas
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/Own/L_MainLevel.L_MainLevel
+GameDefaultMap=/Game/Own/L_MainLevel.L_MainLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
+GlobalDefaultGameMode=/Game/Own/BP_MainGamemode.BP_MainGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
